# locusview

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/: .gitkeep
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-python-first-web-stack-and-storage.md  0003-mvp-scope-and-seed-dataset.md  0004-license-and-repo-posture.md  0005-agent-driven-workflow.md  0007-community-contribution-model.md  0008-store-qtl-in-locuscompare2-database.md
docs/course/: README.md  alignment_matrix.md
docs/design/: community-contributions.md  gene-page-visualizations.md
docs/design/mockups/: LocusView_Standalone_v1.html
docs/explanation/: how-to-review-code.md  pull-requests-and-branch-protection.md  software-engineering-lifecycle.md
docs/how-to/: connect-to-locuscompare2-database.md  setup-your-machine.md
docs/process/: agent-workflow.md  backlog.md  schema-change-coordination.md  status.md  ways-of-working.md
docs/product/: prd.md  roadmap.md  vision.md
docs/reference/: locuscompare2-database.md  schema.md
scripts/: smoke_tabix.sh
src/locusview/: __init__.py  cli.py  config.py  genomics.py  repository.py  search.py  viz.py  web.py
src/locusview/templates/: gene.html  index.html  not_found.html  variant.html
tests/: test_cli.py  test_config.py  test_genomics.py  test_repository.py  test_search.py  test_viz.py  test_web.py
