[project]
name = "locusview"
version = "0.0.0"
description = "A searchable home for publicly available QTL data."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Boxiang Liu and the locusview contributors" }]
dependencies = [
    # Web stack (ADR-0002). Data-layer deps (duckdb/pysam/...) arrive with the
    # first data feature, once the locuscompare2 DB is documented (ADR-0008, issue #1).
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pydantic-settings>=2.4",
    "pymysql>=1.1",
]

[project.scripts]
locusview = "locusview.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6",
    "httpx>=0.27",      # required by fastapi.testclient.TestClient
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/locusview"]

# ── Ruff: linter + formatter ───────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

# ── pytest + coverage gate ─────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=locusview --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["locusview"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

# ── mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
packages = ["locusview"]
strict = true

# uvicorn does not ship type information (no py.typed marker).
[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

# pymysql does not ship type information.
[[tool.mypy.overrides]]
module = ["pymysql.*"]
ignore_missing_imports = true
